# simple-image-resizer-cropper

./: Cargo.toml  README.md
src/: main.rs
