[package]
name = "rust_impl"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.9", features = ["http2"] }
image = "0.24.5"
lazy_static = "1.4.0"
reqwest = { version = "0.11.14", features = ["blocking", "stream", "gzip", "rustls-tls"] }
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.25.0", features = ["full"] }
